force-app/main/default/objects/B25__Related_List_Field__c/B25__Related_List_Field__c.object-meta.xml
<CustomObject>
    <description>Fields that serve as extra information for a Hover, specifically for a Related List on a Hover.</description>
    <label>Related List Field</label>
    <nameField>
        <label>Related List Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related List Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>