force-app/main/default/objects/B25__Related_List_Field__c/fields/B25__Display_As_Link__c.field-meta.xml
<CustomField>
    <fullName>B25__Display_As_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to render the related list field as a link to the record the field belongs to.</description>
    <inlineHelpText>Cochez cette case pour afficher le champ de liste connexe comme un lien vers l’enregistrement auquel ce champ appartient.</inlineHelpText>
    <label>Display As Link</label>
    <type>Checkbox</type>
</CustomField>