force-app/main/default/objects/B25__Related_List_Field__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The header label of the Related List field.</description>
    <inlineHelpText>Le libellé d’en-tête du champ de liste connexe.</inlineHelpText>
    <label>Label</label>
    <length>35</length>
    <type>Text</type>
</CustomField>