force-app/main/default/objects/B25__Related_List_Field__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>The order of the Field you want to display in the Related List.</description>
    <inlineHelpText>L’ordre des champs que vous souhaitez afficher dans la liste connexe.</inlineHelpText>
    <label>Order</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>