force-app/main/default/objects/B25__Related_List_Field__c/fields/B25__Related_List__c.field-meta.xml
<CustomField>
    <fullName>B25__Related_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Related List record to which this Related List Field belongs.</description>
    <inlineHelpText>L’enregistrement de liste connexe auquel appartient ce champ de liste connexe.</inlineHelpText>
    <label>Related List</label>
    <referenceTo>B25__Related_List__c</referenceTo>
    <relationshipLabel>Related List Fields</relationshipLabel>
    <relationshipName>Related_List_Fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>